# space-war

./: .gitignore  CMakeLists.txt  space_war.sln  space_war.vcxproj  space_war.vcxproj.filters
src/: actor.cpp  animation.cpp  button.cpp  camera.cpp  component.cpp  core.cpp  game.cpp  main.cpp  main_state.cpp  node.cpp  planet.cpp  race_select_state.cpp  sprite_component.cpp  star.cpp  system.cpp  vector2.cpp
src/inc/: actor.hpp  animation.hpp  button.hpp  camera.hpp  component.hpp  core.hpp  game.hpp  math.hpp  node.hpp  orbit_component.hpp  planet.hpp  sprite_component.hpp  star.hpp  states.hpp  system.hpp  types.hpp  vector2.hpp
